Fix low contrast for select lists in areas with dark bg. Fixes #3

--- a/css/colors.css
+++ b/css/colors.css
@@ -143,7 +143,6 @@ input.button-danger:hover {
   outline-color: #ff4747;
 }
 select {
-  background-color: initial;
   border: 1px solid #cccccc;
 }
 .vertical-tabs {
